syntax = "proto2";
import public "common_client.proto";
import public "common_mj.proto";

package ddproto;

// Start： 201704142049 下面是麻将回放的 Proto
// 当前页显示记录：第（length * page）条 到 第（length * (page + 1) - 1）条
message playback_req_page {
    optional ProtoHeader header = 1;
    optional int32 length = 2; // 当前分页的长度，如：3，则一页三条快照
    optional int32 page = 3; // 当前页码，从 0 开始。
}

message playback_ack_page {
    optional ProtoHeader header = 1;
    // 分页信息
    optional int32 length = 2; // 当前分页的长度，如：3，则一页三条快照
    optional int32 page = 3; // 当前页码，从 0 开始。
    optional int32 total = 4; // 快照总共数量
    // 快照信息
    repeated PlaybackSnapshot playbackSnapshots = 5; // 快照具体信息（包含协议信息）
}

//玩家的信息
message PlayerInfo {
    optional bool isBanker = 1; // 是否庄家
    optional PlayerCard playerCard = 2; // 玩家的手牌、摆牌（碰杠）、已打出的牌、胡牌信息。客户端需根据服务端的返回进行排序动画。
    optional int64 coin = 3; // 玩家当前显示的自己的筹码数
    optional string nickName = 4; // 昵称
    optional int32 sex = 5; // 性别: 1=男  2=女
    optional uint32 userId = 6; // 用户id
    optional bool isOwner = 7; // 当前用户是否房主
    optional int32 bReady = 8; // 是否已准备
    optional int32 bDingQue = 9; // 是否已定缺
    optional int32 bExchanged = 10; // 是否已换牌(换3张)
    optional int32 nHuPai = 11; // 0:未胡牌; >=1: 已胡牌(血流成河时,表示已胡次数)
    optional int32 quePai = 12; // 缺哪门牌: 1=万 2=条 3=筒
    optional WeixinInfo wxInfo = 13; // 微信用户信息( 进入房间时、广播新进用户时，才需返回WeixinInfo；其它广播不需要。)
    optional int32 GameStatus = 14; //玩家的游戏状态  .
    optional bool agentMode = 15; //托管状态
    optional string ip = 16; //玩家的ip地址
    optional int32 xiaCount = 17; //虾子的数量
    optional bool isBaoTing = 18; //是否已报听
}

// 回放快照信息（包含玩家信息、桌面信息、房间信息、右上角时间信息等），另外包含协议信息（PID 和 二进制数据）
message PlaybackSnapshot {
    optional PlayerInfo playerInfo = 1; // 玩家信息（昵称、筹码、微信信息（头像））
    optional PlaybackDeskInfo playBackDeskInfo = 2; // 桌面信息， 例如：来一圈* 四川麻将
    optional RoomTypeInfo RoomTypeInfo = 3; // 房间信息（当前局数、总局数、房间类型等）(霄霄看下这些信息是否已包含在 DeskGameInfo 中)
    optional string time = 4; // 右上角时间信息
    optional int32 overturnType = 5; //peng gang chi hu bu mo out
    optional int32 userid = 6;
    optional int32 useridOut = 7; // 被操作的人，没有的话 返回 0
    repeated CardInfo cardinfo = 8; //碰。杠，吃，胡，等操作的牌。
    optional string humsg = 9; //胡牌 的时候显示内容。
}
// 按霄霄需求的【回放桌面信息】
message PlaybackDeskInfo {
    optional int32 GameStatus = 1; //游戏所处状态: 0:INIT 1:DINGQUE 2;EXCHANGE 3:PLAYING 4:FINISH
    optional int32 playerNum = 2; //玩家数量
    optional uint32 activeUserId = 3; //当前谁操作，决定：中间的指针应该指向谁，哪个玩家当前是可操作状态
    optional string deskInfo = 4; // "来一圈 * 四川麻将"
    optional int32 remainCards = 5; // 剩余多少张牌
    optional string time = 6; // 当时的时间
    optional int32 roomType = 7; // 房间类型
    optional string roomNumber = 8; // 房间号
    optional int32 currPlayCount = 9; // 朋友桌: 当前第几局
    optional int32 totalPlayCount = 10; // 朋友桌: 总共几局
}

// 一项回放记录
message PlaybackItem {
    optional uint32 id = 1; // 回放记录 id
    // optional common_enum_game gameId = 2; // 回放记录 游戏类型，显示用
    optional uint32 gameId = 2; // 回放记录 游戏类型，显示用
    optional string time = 3; // 回放记录 时间
}
// End  ： 201704142049 下面是麻将回放的 Proto
