syntax = "proto2";

import public "common_client.proto";
package ddproto;
option optimize_for = LITE_RUNTIME;

//房主解散房间(未开局)
message pdk_req_dissolveDesk {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; // 解散房间的用户 id
}
//解散房间回复
message pdk_ack_dissolveDesk {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; // 解散房间的用户 id
    optional int32 deskId = 3; //房间Id
    optional string passWord = 4; //房间密钥
}

//准备游戏
message pdk_req_ready {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; // 操作人
    optional bool isShowHandPokers = 3; // 明牌开始游戏（x5倍）
}

//准备游戏的结果
message pdk_ack_ready {
    optional ProtoHeader header = 1;
    optional string msg = 2; //提示信息
    optional uint32 userId = 3; //广播推送时：表示谁已准备
}

// 赢牌信息：谁赢了多少
message pdk_base_winCoinInfo {
    optional string nickName = 1;
    optional uint32 userId = 2;
    optional int32 baseValue = 3; // 底分
    optional int64 winCoin = 4; // 本次输赢多少(负数表示输了)
    optional int64 coin = 5; // 输赢以后，当前筹码是多少
    optional bool isDiZhu = 6; //是否地主
    optional int32 rate = 7; // 倍数

    optional string description = 8; // 赢牌描述信息 ( 如:"春天 炸弹x2" )
    optional int32 bomb = 9; //炸弹数量
    optional bool isSpring = 10; //是否是春天
    repeated client_base_poker handPokers = 11; //手牌
}

// 本局结果(广播)
message pdk_ba_currentResult {
    optional ProtoHeader header = 1;
    repeated pdk_base_winCoinInfo winCoinInfo = 2; // 本局玩家的输赢明细
    repeated int32 RemainPais = 3; //第三个人的牌
}

message pdk_base_endLotteryInfo {
    optional uint32 userId = 1;
    optional string nickName = 2; //玩家姓名
    optional bool bigWin = 3; //是否为大赢家
    optional bool isOwner = 4; //是否房主
    optional int64 winCoin = 5; //总输赢筹码数
    optional int32 maxWinCoin = 6; //单局最高分
    optional int32 countBomb = 7; //炸弹总数
    optional int32 countWin = 8; //赢了几局
    optional int32 countLose = 9; //输了几局
}

// 牌局结束(广播)
message pdk_bc_endLottery {
    optional ProtoHeader header = 1;
    repeated pdk_base_endLotteryInfo coinInfo = 2; //各人的汇总输赢明细
}

